--- a/_posts/2022-05-26-VOCUS-十三機兵防衛圈-輪迴的救贖.html
+++ b/_posts/2022-05-26-VOCUS-十三機兵防衛圈-輪迴的救贖.html
@@ -30,7 +30,7 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">在遊戲圈裡香草社的遊戲都以精緻的美術畫面出名，尤其是在《魔龍寶冠》和《奧丁領域》這類神話奇幻類的風格，更讓人印象深刻，這次多年後推出的《十三機兵防衛圈》嘗試以機械、未來、科技風格的2D插畫，和超多要角的繪製帶出每個角色的印象，無疑落足了一番功夫。</div>
 <div class="draft-block draft--p left">看來簡單的少年少女打怪獸的核心劇情，卻隨著遊戲的推演後續解鎖的角色故事越多，越來越看清事情整體面貌。《十三機兵防衛圈》在故事和未來科技人物錯綜複雜的各項線路，雖然很努力的在最後做一個完整的收尾，但其實還是相當複雜，故如是第一次接觸大量文字腳本的玩家可能會玩得霧煞煞，需要多跑幾遍故事線才能摸透測。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/6dbb9752-a912-4004-8e00-86d367d4087f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/cnbfwwHrRa8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/cnbfwwHrRa8"></iframe></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/f6a3a3c0-539a-40c3-b854-0af6188c77a8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">原則上這個遊戲在前期、中期就不斷透過一些角色的遭遇和對話來透露出整個故事世界廣大，和並非玩家眼中表象如此，這點懸疑感和科幻感在「追憶篇」主軸表現相當不錯，也可以說這幾乎就是遊戲最重要涵蓋幾乎八成以上本體故事。</div>
 <div class="draft-block draft--p left">《十三機兵防衛圈》優秀的部分我認為是就算是群像劇也可以很順，還有人物全語音的部分讓人讚賞，並且在「崩壞篇」的難度調整對一些不熟戰略遊戲的玩家是相當親切的設定，雖然如果可以跟另外兩個篇章有更多的牽連會更好。</div>
@@ -45,4 +45,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/d3d41738-3503-411f-8ae2-b369f015a5f2.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">《十三機兵防衛圈》將遊玩跟故事分開處理的部分，雖然是一種特色玩法，但每當享受故事和執行策略遊戲的部分總有種被打斷的感覺，這種對於喜歡完整章節的玩家來說有點難耐。還有「崩壞篇」整體來說玩久之後其實有點生膩，雖然從最開始遊戲釋出畫面就有所準備，但相較於《魔龍寶冠》的遊玩性，就感到有點可惜。</div>
 <div class="draft-block draft--p left">但整體來說《十三機兵防衛圈》已經算是近年文字遊戲中很高標的存在，至少光是美術和故事劇情的多人劇，雖沒有多重結局和分支選項降低重玩性，但整體來說要做到十三位少年少女角色各有特色和個性，又不讓人討厭，這點實質厲害。並且玩到最後每位角色決定登上機兵的原因，和最終戰結局的故事，收的相當圓滿，可以說是很適合想享受動畫電影等級的玩家須入手的一款良作。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/tkSv60IXr6Q"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/tkSv60IXr6Q"></iframe></div>
