--- a/_posts/2022-05-26-VOCUS-ep.31-美食生活-誰是糯米飯小偷-跟著泰北的季節一起流動-ft.女子@清邁.html
+++ b/_posts/2022-05-26-VOCUS-ep.31-美食生活-誰是糯米飯小偷-跟著泰北的季節一起流動-ft.女子@清邁.html
@@ -16,7 +16,7 @@ author: 泰太
 <div class="draft-block draft--p left">1. 粉專的創立初衷<br>2. 來跟著季節一起吃<br>3. 惡名昭彰的臭臭菜是...?<br>4. 跟著遷徙的料理活起來！<br>5. 清邁糯米的特別之處<br>6. 抓出糯米飯小偷<br>7. Top3 ลาบ 烤酸肉<br>8. 食物與生活的連結</div>
 <div class="draft-block draft--p left">點擊連結收聽→<a href="https://open.firstory.me/story/cl2g9c860088m01w6hcw15ug0/platforms" target="_blank" class="draft--a">https://open.firstory.me/story/cl2g9c860088m01w6hcw15ug0/platforms</a></div>
 <div class="draft-block draft--p left">或選擇以下你慣用的平台↓</div>
-<div><iframe allowfullscreen src="https://open.firstory.me/story/cl2g9c860088m01w6hcw15ug0/platforms"></div>
+<div><iframe allowfullscreen src="https://open.firstory.me/story/cl2g9c860088m01w6hcw15ug0/platforms"></iframe></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/dff07490-a259-411e-a7e2-cc4fcc952498.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Photo Credit: 女子@清邁</figcaption></div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Podcast </span><a href="https://open.firstory.me/user/taicountry/platforms" target="_blank" class="draft--a">泰太太想說 </a><br><span style="font-weight: bold; ">Instargram  </span><a href="https://www.instagram.com/taicountry/" target="_blank" class="draft--a">@taicountry</a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">底下拍拍手，輕鬆支持我 ↓</span></div>
