--- a/_posts/2022-05-27-INITIUM-端开麦-最后一代-还是-乱世生子-坏的时代里谈谈生育的疑惑与思考.html
+++ b/_posts/2022-05-27-INITIUM-端开麦-最后一代-还是-乱世生子-坏的时代里谈谈生育的疑惑与思考.html
@@ -9,14 +9,14 @@ author: 端传媒 编辑部
 ---
 
 <p>「有的人做了妈妈，有的人还在思考，面对生育，这显然是一种比我们自己更大的议题。」</p><p>端传媒 编辑部</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220527-podcast-openmic-s02-ep08/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/bb6b7d459f7c4c87891809d2534224c3.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><figure class="audio" itemscope itemtype="http://schema.org/AudioObject">
+            <figcaption itemprop="caption"><span class="credit">设计：郭瑾烨</span></figcaption></figure><figure class="audio" itemscope itemtype="http://schema.org/AudioObject">
                 <audio itemprop="contentUrl" src="https://d32kak7w9u5ewj.cloudfront.net/media/audio/2022/05/1308c208440744d9a99e142d49e316bc.mp3" controls controlslist="nodownload">
                     <p class="caption" itemprop="caption">端开麦第二季第八集<span class="credit"></span></p>
                 </audio>
                 <figcaption class="caption description" itemprop="caption">端开麦第二季第八集<span class="credit"></span></figcaption>
             </figure>
 
-<p><strong>欢迎在 [SoundOn][1]、[KKBOX][2]、[Spotify][3]、[Apple Podcast][4]、[Pocket cast][5]、[Google Podcast][6] 平台上关注我们喔！</strong></p>
+<p><strong>欢迎在 <a href="https://player.soundon.fm/p/a8004390-2408-4688-9816-2b106df67151">SoundOn</a>、<a href="https://podcast.kkbox.com/channel/KlctAqx6AIr-G2S_iU">KKBOX</a>、<a href="https://open.spotify.com/show/6wmjViv2qxneOD7uoU3Mwb">Spotify</a>、<a href="https://apple.co/3vDYCpD">Apple Podcast</a>、<a href="https://pca.st/sdwgbzjp">Pocket cast</a>、<a href="https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy5zb3VuZG9uLmZtL3BvZGNhc3RzL2E4MDA0MzkwLTI0MDgtNDY4OC05ODE2LTJiMTA2ZGY2NzE1MS54bWw">Google Podcast</a> 平台上关注我们喔！</strong></p>
 <p>“最后一代”被当做一种宣言，它被包括在怎样的情绪里？是绝望、放弃还是反抗？它从一位年轻男性口中讲出来的时候，影响却远远大于了之前经由女性呼吁的身体自主，似乎也是性别议题的缩影。事实上，青年一代不想生育是全球性议题，人们愈来愈意识到养育小孩的成本很高，各国的经济与就业不断让人失去信心。社会议题和政治氛围是压断骆驼的最后一根稻草，当年轻人无法保障自己的权益时，往往也就放弃了家庭计划，无心生育。</p>
 <p>新一期的端开麦请来三位嘉宾，有的人做了妈妈，有的人还在思考，面对生育，这显然是一种比我们自己更大的议题。</p>
 <p><strong>节目内容</strong>：</p>
