--- a/_posts/2022-05-26-INITIUM-早报-布林肯阐述对华政策-不希望冷战-不依赖转变-不排除竞争.html
+++ b/_posts/2022-05-26-INITIUM-早报-布林肯阐述对华政策-不希望冷战-不依赖转变-不排除竞争.html
@@ -45,5 +45,5 @@ author:
 <h3>印度作家吉坦贾利·施里获得布克国际奖</h3>
 <p>印度小说家<a href="https://www.bbc.com/news/world-asia-india-61561452">吉坦贾利·施里（Geetanjali Shree）</a>成为第一位获得布克国际奖（International Booker Prize）的印度作家。</p>
 <p>其小说《沙之墓》是第一部入围该奖的印地语作品。施里将与该书美国译者黛西·洛克威尔（Daisy Rockwell）分享五万英镑奖金。</p>
-<p>这部小说是关于印度分治阴影背景下的家庭传奇，讲述了一位80岁的女性在丈夫去世后的故事。</p>
+<p>这部小说是关于印巴分治阴影背景下的家庭传奇，讲述了一位80岁的女性在丈夫去世后的故事。</p>
 <p>评审团主席弗兰克·韦恩（Frank Wynne）指，评审团被小说的“力量、凄美和俏皮吸引”，小说的“生动迷人和强烈共情将青春和年龄、男性和女性、家庭和国家编织成了一个万花筒似的整体”。</p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
