--- a/_posts/2022-05-27-PQ-不畏中國打壓-台灣自由淺水選手成功參賽獲佳績.html
+++ b/_posts/2022-05-27-PQ-不畏中國打壓-台灣自由淺水選手成功參賽獲佳績.html
@@ -16,7 +16,7 @@ author: Salima
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/02e9832f-2000x1333_0362965135565.jpg" alt="" class="wp-image-102664" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/02e9832f-2000x1333_0362965135565.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/02e9832f-2000x1333_0362965135565-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/02e9832f-2000x1333_0362965135565-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣自由潛水好手黃明峻（左）日前前往宏都拉斯參賽時國籍遭更改，多次與主辦單位溝通後成功以台灣身分出賽，並拿下無蹼恆重下潛項目亞軍。（圖取自黃明峻臉書facebook.com）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/02e9832f-2000x1333_0362965135565.jpg" alt="" class="wp-image-102664" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/02e9832f-2000x1333_0362965135565.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/02e9832f-2000x1333_0362965135565-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/02e9832f-2000x1333_0362965135565-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣自由潛水好手黃明峻（左）日前前往宏都拉斯參賽時國籍遭更改，多次與主辦單位溝通後成功以台灣身分出賽，並拿下無蹼恆重下潛項目亞軍。（圖取自黃明峻臉書facebook.com）</figcaption></figure>
 
 
 
