--- a/_posts/2022-05-27-PQ-煥然一新的韓國總統府-改採-媒體圍訪-強調溝通.html
+++ b/_posts/2022-05-27-PQ-煥然一新的韓國總統府-改採-媒體圍訪-強調溝通.html
@@ -20,7 +20,7 @@ author: 陳怡菱
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ea11b4a4-202205132017415572_0.jpg" alt="" class="wp-image-102655" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ea11b4a4-202205132017415572_0.jpg 710w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ea11b4a4-202205132017415572_0-300x200.jpg 300w" sizes="(max-width: 710px) 100vw, 710px" /><figcaption>尹錫悅在記者室走動（圖／韓國總統府）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ea11b4a4-202205132017415572_0.jpg" alt="" class="wp-image-102655" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ea11b4a4-202205132017415572_0.jpg 710w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ea11b4a4-202205132017415572_0-300x200.jpg 300w" sizes="(max-width: 710px) 100vw, 710px" /><figcaption>尹錫悅在記者室走動（圖／韓國總統府）</figcaption></figure></div>
 
 
 
