--- a/_posts/2022-05-29-INITIUM-早报-上海发布重振经济方案-6月1日起取消对企业-不合理-限制.html
+++ b/_posts/2022-05-29-INITIUM-早报-上海发布重振经济方案-6月1日起取消对企业-不合理-限制.html
@@ -19,7 +19,7 @@ author:
 <p>促进消费方面，年内将新增非营业性客车牌照额度4万个，阶段性减征部分乘用车购置税；支持大型商贸企业和电商平台发放消费优惠券；支持文创、旅游、体育产业发展。</p>
 <p>扩大投资方面，年内将完成中心城区成片旧区改造，加快零星旧区改造，启动8个以上城中村改造项目；推动在建项目复工复产和新项目开工，支持扩大企业债券申报和发行规模。</p>
 <h3>泽连斯基前往哈尔科夫商讨重建</h3>
-<p>乌克兰总统<a href="https://www.bbc.com/news/world-europe-61625512">泽连斯基周日前往第二大城市哈尔科夫</a>，看望前线部队，并商讨重建计划。这是俄罗斯2月24日入侵以来，他首次正式出现在基辅以外地点。</p>
+<p>乌克兰总统<a href="https://www.bbc.com/news/world-europe-61625512">泽连斯基周日前往第二大城市哈尔科夫</a>，看望前线部队，并商讨重建计划。这是俄罗斯2月24日入侵以来，他首次正式出现在基辅地区以外地点。</p>
 <p>照片中，泽连斯基身穿防弹衣，在哈尔科夫市勘察废墟。他对乌军士兵表达感谢，随后解雇了当地安全主管，因为他“没有保卫”这座城市。</p>
 <p>泽连斯基办公室指，哈尔科夫市及该地区有2229栋建筑被毁，“我们将恢复、重建哈尔科夫以及所有其他被邪恶光顾的城镇乡村，回到从前的生活”。</p>
 <p>哈尔科夫此前有两周相对平静，但最近几天俄军又恢复炮轰。俄军之前已从哈尔科夫周边地区被击退，但该市仍在俄军大炮射程以内。泽连斯基访问后，哈尔科夫出现了几次巨大爆炸声。</p>
