--- a/_posts/2022-05-30-INITIUM-趁香港art-basel来逛艺术-香港年轻艺术家春拍得高价-大陆昔日宠儿却遇冷.html
+++ b/_posts/2022-05-30-INITIUM-趁香港art-basel来逛艺术-香港年轻艺术家春拍得高价-大陆昔日宠儿却遇冷.html
@@ -12,6 +12,9 @@ author: 特约撰稿人 安琪 发自香港
             <figcaption itemprop="caption">2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption></figure><p>十数导览员手持自拍杆，穿梭在展位和作品间，移动寻找更好的角度，试图弥补低像素无法捕捉的作品细节。视频的另一端，潜在买家、VIP客户正透过镜头认真观察著触不可及的作品。</p>
 <p>这是今年香港巴塞尔艺术展（Art Basel HK 2022）的现场。由于入境措施依旧严格，许多买家客户无法亲临，展会方便如去年一样提供线上导览服务。有了去年的经验，今年各展位的画廊代表对电子价目表和视频电话的使用显然更加熟练。进入疫情第三年，香港的艺术品国际销售已然电商化。</p>
 <h2>艺术令香港阴霾一扫空？</h2>
+<blockquote>
+<p>其实对于香港本地观众来说，展会和拍卖一直都是能够集中欣赏国际顶尖艺术作品的绝佳时机。</p>
+</blockquote>
 <p>自巴塞尔艺术展2013年入驻香港，每年三月的最后一周，它都会为这座城市带来一场热烈的艺术品国际交易，也因此成为文化交流的密集时刻。2015-2019年间，每年有来自超过30个国家的约240间画廊参展。随著近万件作品抵达香港的，还有来自世界各地的画廊主、艺术家、藏家、策展人、美术馆馆长⋯⋯除了参与展会，也是为参观香港全城其他画廊及艺术机构在此时精心策划的展览。</p>
 <p>2019年社会运动发生后又赶上疫情爆发，香港社会气氛低迷，这种艺术及交易狂欢遂不复存在。2020年的巴塞尔艺术展因之取消，2021年延迟举办。而今年的境地也类似去年，因第五波疫情及可谓严苛的社交防疫措施，艺术展从3月 延迟至5月25日，于湾仔会展中心开幕。</p>
  
@@ -24,22 +27,6 @@ author: 特约撰稿人 安琪 发自香港
  
  
  
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
  
 
  
@@ -48,15 +35,52 @@ author: 特约撰稿人 安琪 发自香港
  
  
  
+ 
+ 
+ 
+ 
+ 
+ 
 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
  
  
  
  
  
 <p>同疫情前每年一样，在巴塞尔艺术展开幕同时，更加面向香港本地观众的Art Central博览会和便利亚洲藏家的佳士得春拍预展也同期在会展中心举办。低迷了一整个春天的香港艺术界至此终于进入“复活”气氛。与此同时，中环的大馆当代美术馆，港岛东Para Site艺术空间，一海之隔的西九龙文化区M+美术馆等公共艺术机构，也在因疫情闭馆近四个月后，于早前社交距离措施放宽的4月21日重新对外开放，令不少对抗疫早已失去耐心的民众可以找到休闲喘息之地。而商业机构如中环H Queens大厦里的蓝筹划廊和港岛南区的新势力画廊等，也取消了需要提前预约的观展要求。在巴塞尔开幕前的那个周六（5月21日），去年迁至尖沙嘴的贝浩登画廊和位于黄竹坑的Ben Brown, Blindspot, Mine Project等画廊也纷纷宣布开幕新展。艺术界众人终于可以在久未碰面之后，一边欣赏作品一边畅谈巴塞尔期间的工作计划，过去数月居家工作的阴霾似乎一扫而空。</p><p>公众人流：无法参与的球桌</p><p>然而，毕竟由于海外人士缺席，今年巴塞尔VIP日比起去年稍显冷清，同城发生的艺术项目和活动，更无法与疫情前各家卯足劲推出新展并组织各种party的盛况相提并论。然而在展览公众日，前来观看展览的艺术爱好者和市民，其人流却与去年相若。</p><p><a class="image" href="https://theinitium.com/article/20220531-culture-art-basel-hk-and-art-vibe-local/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/0837cc048b4f4cf68028bbc5b72c3d41.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>其实对于香港本地观众来说，展会和拍卖一直都是能够集中欣赏国际顶尖艺术作品的绝佳时机。固然香港自1975年便拥有了公立机构香港美术馆（2015-2019年闭馆重修），也有2016年起在西九临时空间的M+ Paviliion策划国际性展览，2018年开幕的大馆也承担起连结国际与本土的重要作用，但直到2021年11月M+美术馆开幕，香港其实一直都缺少一间国际化大型公共当代艺术机构。而巴塞尔艺术展和国际拍卖行，就恰好填补了这个空缺，也在香港机构发展真正成熟前部分地担任了培育本地观众艺术审美和品味的角色。</p><p>这个意义上，2022年的巴塞尔艺术展亦未令艺术爱好者失望。今年计130家画廊参展，虽比疫情前少了近一倍，但比起去年的104家却算是有所回温。其中75间海外画廊以卫星展位的形式参展，通过培训本地临时雇员来同香港观众建立联系。网上展厅 (OVR) 也同期放开，每间画廊为线上观众提供精选作品。</p><p>作品媒介上，架上绘画依旧最被青睐，但也有画廊将机会给予雕塑和装置艺术，摄影和影像作品则最少见。因社交距离限制而变得宽敞的展场间，也一直有导览员工作，他们有的像前述情景那样为线上藏家提供一对一服务，按对方要求到指定展位或作品前停留；有的是本地策展人和艺术工作者，在展会方邀请下为VIP提供多语言线上导览直播；也有公开英文线上直播，任何观众都可以通过YouTube在线观看。而在周末公众场，艺术爱好者和市民则积极游走在展厅，气氛相当亲民，人头攒动中，观者纷纷拍照打卡。佩斯画廊为了保护墙上雕塑《On Target》，在作品前摆放了一张椅子，于是男女老少路过都“乖乖”坐下合影。</p><p>虽然知道不该带著去美术馆看展的批判心态走进一场艺术展会，但还是要感慨今年巴塞尔香港的作品延续了其一贯漂亮、有趣、好卖的风格，只有少数作品将讨论延伸至了“美”之外。德国neugerriemschneider画廊带来了泰国艺术家Rirkrit Tiravanija的作品《无题》（2022）——一 张印上“明天才是问题”的崭新乒乓球桌，引诱观众上前挥拍参与。孰料抗疫严谨的展会现场并未给公众提供球拍和球，直接杜绝了预设中的互动之可能。这当出乎画廊与艺术家的意料之外，毕竟本地抗疫未如欧洲那般宣告结束，球桌于此刻只凭添一分局促。</p><p><a class="image" href="https://theinitium.com/article/20220531-culture-art-basel-hk-and-art-vibe-local/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/0148d353a252449ab49d0b667c50fd63.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>本地文化机构不愿再做门面？</p><p>今年的文化机构展位，位于主展场外的走廊，艺术品交易之亢奋气氛在这里得以暂时离开，但笔者看来，这里却正好表现了巴塞尔艺术展与香港本土文化土壤正在发生的关系变化。今年计有六间香港本地文化机构参与了巴塞尔艺术展，分别是1a Space、亚洲协会、亚洲文化协会、香港画廊协会、香港艺术中心和Para Site。2019及之前的展会上，文化机构展位是在整场展览的入口处占据更大、更显眼的空间，而今年却被安排到如今狭小的角落。</p><p>从本地文化机构主动希望获得巴塞尔展位，到像亚洲艺术文献库（Asia Art Archive）这样重要机构低调退出，从推出本地新晋艺术家展览，到销售作品为机构筹款，无论是巴塞尔的安排，还是机构的决定，都在提醒香港：两者之间因观众数量和质量的锐减，都在变得对对方失去兴趣。</p><p>虽然非营利机构和商业艺术行业目的迥异，但香港艺术生态中，这两方尤其需要相互扶持。疫情前的展会上，文化机构展位是巴塞尔艺术展希求的门面，来自世界各地的访客验票后即会看到机构展位，大馆、亚洲艺术文献库、Para Site等研究机构的出现正意味著对巴塞尔艺术展之于香港艺术贡献的肯定；而如今这种“嫌弃”对方的苗头，则似乎极不利展会与本地艺术生态建立关系。笔者看来，展会方需要反思今年对机构的冷落，是否反应其对本地艺术生态的错误衡量；艺术机构亦可考虑重新与展会建立沟通。</p><p>Art Central：支持“香港制造”，但可以帮忙到底？</p><p>公众开放日里和巴塞尔一样人头涌涌的，是同位于会展中心的Art Central。它以更初出茅庐的作品、更紧凑小型的布局、更有优势的价格，与巴塞尔竞争目光与人潮。今年Art Central吸引了52间画廊参加，其中41间在香港本地经营，包括成立于1996年的老牌画廊Opera Gallery、年轻但格外收到追捧的Over the Infulence、在亚洲运营五所空间的白石 （White Stone）、专注推广韩国和亚洲当代艺术的Soluna Fine Art，及去年刚刚成立但已收获了香港核心艺术家资源的Square Street Gallery，还有这个月才在上环开设空间的Double Q。</p><p>核心展位外，Art Central首次推出的“香港制造”（Made In HK）项目，令人耳目一新。所有作品挑选自Art Central在今年初的公开征集，申请者必须是尚未被任何商业画廊代理的创作者。香港独立策展人、学者瞿畅作为该项目顾问，在逾650件申请中挑选出40位艺术家的65组作品，许多都是素人和非职业艺术家的创作。</p><p>瞿畅在采访中对笔者表示，这次评审过程令她惊喜发现了一些未曾在过去策展研究中出现的艺术家新面孔，也有例如职业是建筑师的业余艺术家。申请作品主题和媒介的丰富性反应出香港艺术创作的广阔度，最终展出的作品更是在形式和内容上保持了一致性，足够令人信服。独立策展人和艺评人万丰也肯定了这次项目对香港本地新锐艺术家的重要性。即使香港有发达的画廊行业，但对大部分艺术家来说，展览和销售机会十分可贵。参与申请不但磨练自己对作品的表达能力，获选后更可以借助Art Central的平台尝试了解艺术的价格体系，参与艺术销售。</p><p>只是“香港制造”的局限也颇值得思考：65组作品在Art Central最靠内部的墙上一字排开，缺少了通常商业画廊会提供的现场讲解，将沟通门槛加至普通观众身上。同时，艺术家也是自己负责作品的安装与运输，并与Art Central分成销售金额，对经验尚浅的艺术家个人来说，这些环节或许都需要进一步的帮助与更多资讯。</p><p><a class="image" href="https://theinitium.com/article/20220531-culture-art-basel-hk-and-art-vibe-local/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/9f1a2dbe6d294719b97078837215b31a.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="2022年5月27日，香港，Art Central艺术展在湾仔会展举行。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">2022年5月27日，香港，Art Central艺术展在湾仔会展举行。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>春拍：香港艺术家高价，中国昔日巨星遇冷？</p><p>与Art Central相邻的佳士得春拍预展，5月27日晚公布捷报，“二十及二十一世纪艺术”拍卖成交总额高达18亿港币。虽然商业价值不一定完全反应艺术价值，但却可以体现市场和行业内部对作品当下的信心与兴趣。其中，香港艺术家禤善勤（Chris Huen）油画《Joel和Balltsz》（2018）以110万港币落槌，是艺术家在佳士得拍卖的最好成绩；黎 清妍（Firenze Lai）油画《重量》（2013）以400万港币落槌，刷新艺术家拍卖记录；而第二次上拍佳士得的已故“九龙皇帝”曾灶财，也以高出估价的16万港币，落槌售出纸本作品《无题》（2012）。</p><p>三位艺术家的拍卖结果，显示出市场此刻对香港艺术家的青睐，而他们也正代表著当代香港艺术文化中的重要历史时刻。禤善勤钟爱寄情于香港自然，画面平淡是真，而这或许是他及许多港人于乱世中自处的哲学；黎清妍笔下的忧伤，连结的不仅是情感丰富、敢爱敢恨的新一代香港年轻人，更是整座城市在接连不断的社会事件爆发后的情绪微妙投射。曾灶财则代表香港最基层本土文化，早从街头被正名化，化身本土政治性艺术家。</p><p>与香港艺术家的高价拍出对照，中国政治波普艺术家们也曾在2008年前后的国际艺术拍卖市场中，风头一时无两，是市场的绝对宠儿。只是14年后的今天，似乎已由新势力取代其地位，原因概包括中国大陆愈加严苛的艺术品审查制度，中国买家资金外汇等困难。今次中国艺术家刘炜的油画《革命家庭》（1998），未逃过市场冷遇而最终流拍；曾梵志1992年的作品《协和医院系列之三》虽以4000万港币落槌，却远远低于其2013年佳士得秋拍1.13亿港币的成交价。《协议医院》系列刻画 了武汉市第十一医院内普通民众就医的场景，艺术家冷酷笔触不失悲天悯人，无论是当年触目惊心的现实之苦，还是隐喻嘲讽当下疫情时代中国病态社会，作品本身在三十年后的今天都算掷地有声，可惜这并未抵过低落的市场。</p><p><a class="image" href="https://theinitium.com/article/20220531-culture-art-basel-hk-and-art-vibe-local/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/1773f9b7100947dc8cc1c626835e5f83.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="关注劳工权益的香港艺术家程展纬，在非牟利艺术组织1a space在巴塞尔艺术展的摊位展出作品，为要在港铁站内卖一个与清洁工相关的广告众筹。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">关注劳工权益的香港艺术家程展纬，在非牟利艺术组织1a space在巴塞尔艺术展的摊位展出作品，为要在港铁站内卖一个与清洁工相关的广告众筹。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>走出湾仔，还有哪里有艺术？</p><p>环顾市区，五月夏意里，香港艺术氛围的制造除了湾仔会展中心，也来自周边闹市的众多艺术机构。仅举大馆与Para Site为例。</p><p>大馆当代美术馆在艺术周期间正展出群展《圆缺俱乐部》和《双同》。前者的结尾作品邀请观众离开展厅，移步至一条楼梯间，体验香港艺术家严瑞芳的声音装置《梯间回声》（2022）。播放的弥撒歌曲《最后的晚餐》由多位近两年移民海外的港人录制，参与者中不乏像艺术家、策展人张嘉莉（曾是跑马地民主派区议员）这样的香港艺术界中流砥柱。位于中环腹地的大馆，曾以频繁线下讲座、工作坊、放映、表演等活动成为市民热衷造访的文化场所，惟疫期社交距离的反复收紧迫使此类有著公共艺术教育面向的活动锐减，中环以往饱满的文化活力也在此期间降至最低点。而现下的疫情措施放宽及艺术周的人流，也令大馆展览的参观人气回升。</p><p>Para Site艺术空间虽相较而言是一家小型艺术机构，却是疫情期间全港范围内率先推出线上活动的机构。它于2020年4月陆续推出线上直播讲座，并于当年5月开始了长期项目“PS Paid Studio Visits”，与香港年轻艺术家线上探访，在对公众免费开放的前提下，向艺术家提供薪酬及一个月医疗保险，至今已有75位／组艺术家参与。虽然项目对初出茅庐的艺术家来说是尤其珍贵的机会，疫情期间长期只有线上活动也多少令人疲惫。5月13日，Para Site开幕了新展《搁 角 觉》，再现七组艺术家未完成、急于在当下呈现的作品。清一色香港阵容令人联想到空间创立之初的七位本地创作者。可惜时代变迁，作为观众再也看不到当年曾在这空间中发生的辛辣讨论，展出作品相较当年愈发晦涩，国安法“新”香港下，艺术界难免陷入自我审查、自我安慰甚或妥协，这也正是未来香港艺术不可回避的处境与难题。</p><p>整体来讲，香港非营利机构面对公众层面，经历疫情期间的封闭与冷清，在刻下展现了重振的决心，但笔者觉得方法上仍有进一步推陈出新、广邀公众进一步参与艺术活动的空间。例如就在同一个五月，纽约的MoMA此刻正在组织通过声音装置来抚慰更广大市民心灵的“Healing Sound Bath”，而伦敦的Tate美术馆也逐渐恢复起邀请公众来美术馆内参与正念（mindfulness）的频率。</p><p><a class="image" href="https://theinitium.com/article/20220531-culture-art-basel-hk-and-art-vibe-local/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/667adbf168034d9fa886a20ce89366f7.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>香港会被首尔超过吗？</p><p>巴塞尔艺术展的确为香港创造了一个疫期里声色繁荣的艺术周，而在持续疫情和旅行限制下，2022年5月底的这一个星期也延续了去年艺术周的自娱自乐风格，更暴露出一些香港艺术生态的问题：</p><p>就整体香港本地艺术生态而言，或许需要重新整理思路与整合策略。对于艺术市场一方，目前利用线上为藏家解决无法现场观看与购买的情况只是第一步，艺术电商化的同时，也需要明白这确实进一步减弱了创作者想要与观者对话的渴求；而对面向公众的艺术教育机构和工作者，创造新的文化生产传播手段似乎十分紧迫。两方或也需要更进一步的合作。</p><p>向内看，疫情两年，越来越多的画廊发掘了本地艺术家，更愿意投入时间和财力支持他们举办个展、持续创作，展会与拍卖市场从市场的角度证明了这种投入的“成果”。而艺术工作者也因在疫情中失去更多外出研究机会，更加依赖商业机构提供的工作和扶持。但换个角度，也不妨说这促进了艺术生态内这两边的参与者更多需要面对彼此的时刻。</p><p>向外看，香港此刻在国际艺术领域，其实正面临更严峻的挑战。全球政经情况下行，香港作为国际金融中心的地位需要新一轮观察与检验，这亦直接或间接反应于艺术品交易市场。约十年前，香港开始主动邀请国际画廊入驻中环，彼时发展局大力为画廊业争取惠利政策，宣扬香港免税港在国际艺术品交易层面的优势。而今近邻韩国却势如破竹，早前已免除6000万韩元以下作品和在世艺术家作品的销售税，取消艺术品进口税，正在推进的税法改革也在向美国学习，将捐赠艺术品变成抵税手段。</p><p>此外，首尔也即将在今年9月迎来Frieze亚洲新展会的消息，到时势必一番世人瞩目眼光，今年首次缺席香港巴塞尔艺术展的Gladstone画廊就是正在为了参与Frieze Seoul而设立首尔新空间，这种情况下，香港需要加强内部合作来抵御强劲竞争？本土的艺术生态又可能在后疫情时代，与商业机构进行更多的合作吗？</p>
+</p><figcaption itemprop="caption">2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>
+</p><p>今年巴塞尔香港的作品延续了其一贯漂亮、有趣、好卖的风格，只有少数作品将讨论延伸至了“美”之外。</p>
+<p></p><p>其实对于香港本地观众来说，展会和拍卖一直都是能够集中欣赏国际顶尖艺术作品的绝佳时机。固然香港自1975年便拥有了公立机构香港美术馆（2015-2019年闭馆重修），也有2016年起在西九临时空间的M+ Paviliion策划国际性展览，2018年开幕的大馆也承担起连结国际与本土的重要作用，但直到2021年11月M+美术馆开幕，香港其实一直都缺少一间国际化大型公共当代艺术机构。而巴塞尔艺术展和国际拍卖行，就恰好填补了这个空缺，也在香港机构发展真正成熟前部分地担任了培育本地观众艺术审美和品味的角色。</p><p>这个意义上，2022年的巴塞尔艺术展亦未令艺术爱好者失望。今年计130家画廊参展，虽比疫情前少了近一倍，但比起去年的104家却算是有所回温。其中75间海外画廊以卫星展位的形式参展，通过培训本地临时雇员来同香港观众建立联系。网上展厅 (OVR) 也同期放开，每间画廊为线上观众提供精选作品。</p><p>作品媒介上，架上绘画依旧最被青睐，但也有画廊将机会给予雕塑和装置艺术，摄影和影像作品则最少见。因社交距离限制而变得宽敞的展场间，也一直有导览员工作，他们有的像前述情景那样为线上藏家提供一对一服务，按对方要求到指定展位或作品前停留；有的是本地策展人和艺术工作者，在展会方邀请下为VIP提供多语言线上导览直播；也有公开英文线上直播，任何观众都可以通过YouTube在线观看。而在周末公众场，艺术爱好者和市民则积极游走在展厅，气氛相当亲民，人头攒动中，观者纷纷拍照打卡。佩斯画廊为了保护墙上雕塑《On Target》，在作品前摆放了一张椅子，于是男女老少路过都“乖乖”坐下合影。</p><p>虽然知道不该带著去美术馆看展的批判心态走进一场艺术展会，但还是要感慨今年巴塞尔香港的作品延续了其一贯漂亮、有趣、好卖的风格，只有少数作品将讨论延伸至了“美”之外。德国neugerriemschneider画廊带来了泰国艺术家Rirkrit Tiravanija的作品《无题》（2022）——一 张印上“明天才是问题”的崭新乒乓球桌，引诱观众上前挥拍参与。孰料抗疫严谨的展会现场并未给公众提供球拍和球，直接杜绝了预设中的互动之可能。这当出乎画廊与艺术家的意料之外，毕竟本地抗疫未如欧洲那般宣告结束，球桌于此刻只凭添一分局促。</p><p><a class="image" href="https://theinitium.com/article/20220531-culture-art-basel-hk-and-art-vibe-local/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/0148d353a252449ab49d0b667c50fd63.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>本地文化机构不愿再做门面？</p><p>
+</p><p>无论是巴塞尔的安排，还是文化机构的决定，都在提醒香港：两者之间因观众数量和质量的锐减，都在变得对对方失去兴趣。</p>
+<p></p><p>今年的文化机构展位，位于主展场外的走廊，艺术品交易之亢奋气氛在这里得以暂时离开，但笔者看来，这里却正好表现了巴塞尔艺术展与香港本土文化土壤正在发生的关系变化。今年计有六间香港本地文化机构参与了巴塞尔艺术展，分别是1a Space、亚洲协会、亚洲文化协会、香港画廊协会、香港艺术中心和Para Site。2019及之前的展会上，文化机构展位是在整场展览的入口处占据更大、更显眼的空间，而今年却被安排到如今狭小的角落。</p><p>从本地文化机构主动希望获得巴塞尔展位，到像亚洲艺术文献库（Asia Art Archive）这样重要机构低调退出，从推出本地新晋艺术家展览，到销售作品为机构筹款，无论是巴塞尔的安排，还是机构的决定，都在提醒香港：两者之间因观众数量和质量的锐减，都在变得对对方失去兴趣。</p><p>虽然非营利机构和商业艺术行业目的迥异，但香港艺术生态中，这两方尤其需要相互扶持。疫情前的展会上，文化机构展位是巴塞尔艺术展希求的门面，来自世界各地的访客验票后即会看到机构展位，大馆、亚洲艺术文献库、Para Site等研究机构的出现正意味著对巴塞尔艺术展之于香港艺术贡献的肯定；而如今这种“嫌弃”对方的苗头，则似乎极不利展会与本地艺术生态建立关系。笔者看来，展会方需要反思今年对机构的冷落，是否反应其对本地艺术生态的错误衡量；艺术机构亦可考虑重新与展会建立沟通。</p><p>Art Central：支持“香港制造”，但可以帮忙到底？</p><p>
+</p><p>Art Central以更初出茅庐的作品、更紧凑小型的布局、更有优势的价格，与巴塞尔竞争目光与人潮。</p>
+<p></p><p>公众开放日里和巴塞尔一样人头涌涌的，是同位于会展中心的Art Central。它以更初出茅庐的作品、更紧凑小型的布局、更有优势的价格，与巴塞尔竞争目光与人潮。今年Art Central吸引了52间画廊参加，其中41间在香港本地经营，包括成立于1996年的老牌画廊Opera Gallery、年轻但格外收到追捧的Over the Infulence、在亚洲运营五所空间的白石 （White Stone）、专注推广韩国和亚洲当代艺术的Soluna Fine Art，及去年刚刚成立但已收获了香港核心艺术家资源的Square Street Gallery，还有这个月才在上环开设空间的Double Q。</p><p>核心展位外，Art Central首次推出的“香港制造”（Made In HK）项目，令人耳目一新。所有作品挑选自Art Central在今年初的公开征集，申请者必须是尚未被任何商业画廊代理的创作者。香港独立策展人、学者瞿畅作为该项目顾问，在逾650件申请中挑选出40位艺术家的65组作品，许多都是素人和非职业艺术家的创作。</p><p>瞿畅在采访中对笔者表示，这次评审过程令她惊喜发现了一些未曾在过去策展研究中出现的艺术家新面孔，也有例如职业是建筑师的业余艺术家。申请作品主题和媒介的丰富性反应出香港艺术创作的广阔度，最终展出的作品更是在形式和内容上保持了一致性，足够令人信服。独立策展人和艺评人万丰也肯定了这次项目对香港本地新锐艺术家的重要性。即使香港有发达的画廊行业，但对大部分艺术家来说，展览和销售机会十分可贵。参与申请不但磨练自己对作品的表达能力，获选后更可以借助Art Central的平台尝试了解艺术的价格体系，参与艺术销售。</p><p>只是“香港制造”的局限也颇值得思考：65组作品在Art Central最靠内部的墙上一字排开，缺少了通常商业画廊会提供的现场讲解，将沟通门槛加至普通观众身上。同时，艺术家也是自己负责作品的保险与运输，并与Art Central分成销售金额，对经验尚浅的艺术家个人来说，这些环节或许都需要进一步的帮助与更多资讯。</p><p><a class="image" href="https://theinitium.com/article/20220531-culture-art-basel-hk-and-art-vibe-local/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/9f1a2dbe6d294719b97078837215b31a.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="2022年5月27日，香港，Art Central艺术展在湾仔会展举行。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2022年5月27日，香港，Art Central艺术展在湾仔会展举行。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>春拍：香港艺术家高价，中国昔日巨星遇冷？</p><p>
+</p><p>三位艺术家的拍卖结果，显示出市场此刻对香港艺术家的青睐，而他们也正代表著当代香港艺术文化中的重要历史时刻。</p>
+<p></p><p>与Art Central相邻的佳士得春拍预展，5月27日晚公布捷报，“二十及二十一世纪艺术”拍卖成交总额高达18亿港币。虽然商业价值不一定完全反应艺术价值，但却可以体现市场和行业内部对作品当下的信心与兴趣。其中，香港艺术家禤善勤（Chris Huen）油画《Joel和Balltsz》（2018）以110万港币落槌，是艺术家在佳士得拍卖的最好成绩；黎 清妍（Firenze Lai）油画《重量》（2013）以400万港币落槌，刷新艺术家拍卖记录；而第二次上拍佳士得的已故“九龙皇帝”曾灶财，也以高出估价的16万港币，落槌售出纸本作品《无题》（2012）。</p><p>三位艺术家的拍卖结果，显示出市场此刻对香港艺术家的青睐，而他们也正代表著当代香港艺术文化中的重要历史时刻。禤善勤钟爱寄情于香港自然，画面平淡是真，而这或许是他及许多港人于乱世中自处的哲学；黎清妍笔下的忧伤，连结的不仅是情感丰富、敢爱敢恨的新一代香港年轻人，更是整座城市在接连不断的社会事件爆发后的情绪微妙投射。曾灶财则代表香港最基层本土文化，早从街头被正名化，化身本土政治性艺术家。</p><p>与香港艺术家的高价拍出对照，中国政治波普艺术家们也曾在2008年前后的国际艺术拍卖市场中，风头一时无两，是市场的绝对宠儿。只是14年后的今天，似乎已由新势力取代其地位，原因概包括中国大陆愈加严苛的艺术品审查制度，中国买家资金外汇等困难。今次中国艺术家刘炜的油画《革命家庭》（1998），未逃过市场冷遇而最终流拍；曾梵志1992年的作品《协和医院系列之三》虽以4000万港币落槌，却远远低于其2013年佳士得秋拍1.13亿港币的成交价。《协议医院》系列刻画 了武汉市第十一医院内普通民众就医的场景，艺术家冷酷笔触不失悲天悯人，无论是当年触目惊心的现实之苦，还是隐喻嘲讽当下疫情时代中国病态社会，作品本身在三十年后的今天都算掷地有声，可惜这并未抵过低落的市场。</p><p>
+</p><p>中国政治波普艺术家们也曾在2008年前后的国际艺术拍卖市场中，风头一时无两，是市场的绝对宠儿。只是14年后的今天，似乎已由新势力取代其地位，原因概包括中国大陆愈加严苛的艺术品审查制度，中国买家资金外汇等困难。</p>
+<p></p><p><a class="image" href="https://theinitium.com/article/20220531-culture-art-basel-hk-and-art-vibe-local/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/1773f9b7100947dc8cc1c626835e5f83.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="关注劳工权益的香港艺术家程展纬，在非牟利艺术组织1a space在巴塞尔艺术展的摊位展出作品，为要在港铁站内卖一个与清洁工相关的广告众筹。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">关注劳工权益的香港艺术家程展纬，在非牟利艺术组织1a space在巴塞尔艺术展的摊位展出作品，为要在港铁站内卖一个与清洁工相关的广告众筹。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>走出湾仔，还有哪里有艺术？</p><p>
+</p><p>可惜时代变迁，作为观众再也看不到当年曾在Para Site中发生的辛辣讨论，展出作品相较当年愈发晦涩，国安法“新”香港下，艺术界难免陷入自我审查、自我安慰甚或妥协，这也正是未来香港艺术不可回避的处境与难题。</p>
+<p></p><p>环顾市区，五月夏意里，香港艺术氛围的制造除了湾仔会展中心，也来自周边闹市的众多艺术机构。仅举大馆与Para Site为例。</p><p>大馆当代美术馆在艺术周期间正展出群展《圆缺俱乐部》和《双同》。前者的结尾作品邀请观众离开展厅，移步至一条楼梯间，体验香港艺术家严瑞芳的声音装置《梯间回声》（2022）。播放的弥撒歌曲《最后的晚餐》由多位近两年移民海外的港人录制，参与者中不乏像艺术家、策展人张嘉莉（曾是跑马地民主派区议员）这样的香港艺术界中流砥柱。位于中环腹地的大馆，曾以频繁线下讲座、工作坊、放映、表演等活动成为市民热衷造访的文化场所，惟疫期社交距离的反复收紧迫使此类有著公共艺术教育面向的活动锐减，中环以往饱满的文化活力也在此期间降至最低点。而现下的疫情措施放宽及艺术周的人流，也令大馆展览的参观人气回升。</p><p>Para Site艺术空间虽相较而言是一家小型艺术机构，却是疫情期间全港范围内率先推出线上活动的机构。它于2020年4月陆续推出线上直播讲座，并于当年5月开始了长期项目“PS Paid Studio Visits”，与香港年轻艺术家线上探访，在对公众免费开放的前提下，向艺术家提供薪酬及一个月医疗保险，至今已有75位／组艺术家参与。虽然项目对初出茅庐的艺术家来说是尤其珍贵的机会，疫情期间长期只有线上活动也多少令人疲惫。5月13日，Para Site开幕了新展《搁 角 觉》，再现七组艺术家未完成、急于在当下呈现的作品。清一色香港阵容令人联想到空间创立之初的七位本地创作者。可惜时代变迁，作为观众再也看不到当年曾在这空间中发生的辛辣讨论，展出作品相较当年愈发晦涩，国安法“新”香港下，艺术界难免陷入自我审查、自我安慰甚或妥协，这也正是未来香港艺术不可回避的处境与难题。</p><p>整体来讲，香港非营利机构面对公众层面，经历疫情期间的封闭与冷清，在刻下展现了重振的决心，但笔者觉得方法上仍有进一步推陈出新、广邀公众进一步参与艺术活动的空间。例如就在同一个五月，纽约的MoMA此刻正在组织通过声音装置来抚慰更广大市民心灵的“Healing Sound Bath”，而伦敦的Tate美术馆也逐渐恢复起邀请公众来美术馆内参与正念（mindfulness）的频率。</p><p><a class="image" href="https://theinitium.com/article/20220531-culture-art-basel-hk-and-art-vibe-local/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/667adbf168034d9fa886a20ce89366f7.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2022年5月27日，香港，巴塞尔艺术展在湾仔会展举行。<span class="credit">摄：Stanley Leung/端传媒</span></figcaption><p></p><p>香港会被首尔超过吗？</p><p>
+</p><p>首尔也即将在今年9月迎来Frieze亚洲新展会的消息，到时势必一番世人瞩目眼光，今年首次缺席香港巴塞尔艺术展的Gladstone画廊就是正在为了参与Frieze Seoul而设立首尔新空间。</p>
+<p></p><p>巴塞尔艺术展的确为香港创造了一个疫期里声色繁荣的艺术周，而在持续疫情和旅行限制下，2022年5月底的这一个星期也延续了去年艺术周的自娱自乐风格，更暴露出一些香港艺术生态的问题：</p><p>就整体香港本地艺术生态而言，或许需要重新整理思路与整合策略。对于艺术市场一方，目前利用线上为藏家解决无法现场观看与购买的情况只是第一步，艺术电商化的同时，也需要明白这确实进一步减弱了创作者想要与观者对话的渴求；而对面向公众的艺术教育机构和工作者，创造新的文化生产传播手段似乎十分紧迫。两方或也需要更进一步的合作。</p><p>向内看，疫情两年，越来越多的画廊发掘了本地艺术家，更愿意投入时间和财力支持他们举办个展、持续创作，展会与拍卖市场从市场的角度证明了这种投入的“成果”。而艺术工作者也因在疫情中失去更多外出研究机会，更加依赖商业机构提供的工作和扶持。但换个角度，也不妨说这促进了艺术生态内这两边的参与者更多需要面对彼此的时刻。</p><p>向外看，香港此刻在国际艺术领域，其实正面临更严峻的挑战。全球政经情况下行，香港作为国际金融中心的地位需要新一轮观察与检验，这亦直接或间接反应于艺术品交易市场。约十年前，香港开始主动邀请国际画廊入驻中环，彼时发展局大力为画廊业争取惠利政策，宣扬香港免税港在国际艺术品交易层面的优势。而今近邻韩国却势如破竹，早前已免除6000万韩元以下作品和在世艺术家作品的销售税，取消艺术品进口税，正在推进的税法改革也在向美国学习，将捐赠艺术品变成抵税手段。</p><p>此外，首尔也即将在今年9月迎来Frieze亚洲新展会的消息，到时势必一番世人瞩目眼光，今年首次缺席香港巴塞尔艺术展的Gladstone画廊就是正在为了参与Frieze Seoul而设立首尔新空间，这种情况下，香港需要加强内部合作来抵御强劲竞争？本土的艺术生态又可能在后疫情时代，与商业机构进行更多的合作吗？</p>
