--- a/_posts/2022-05-30-INMEDIA-8.31太子站半週年-25歲男認以傘襲警判監8個月-官稱襲警行為不容姑息.html
+++ b/_posts/2022-05-30-INMEDIA-8.31太子站半週年-25歲男認以傘襲警判監8個月-官稱襲警行為不容姑息.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/half_2.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>前年8.31太子站事件半週年，示威者於旺角一帶聚集，警方驅散期間，一名便衣警落單被追打，頭盔跌在地上，並一度拔槍。3名男子事隔兩年分別被控襲警等3罪，其中一名案發時23歲的男子今（30日）於西九龍法院承認以傘襲警，被裁判官鄭念慈判監8個月。男子求情指，犯案並非有預謀，案發時得悉有警員落單，身邊人有動作，才「一時意氣」施襲。裁判官指被告為最先襲警的其中一人，在警員倒地仍攻擊，使其骨裂及多處損傷，法庭必須判阻嚇性刑罰，發出不容姑息襲警的強烈訊息。至於同案不認罪的兩人，押後至7月25日進行審前覆核。罪成被告離庭前向旁聽席90度鞠躬。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/half_2.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>前年8.31太子站事件半週年，示威者於旺角一帶聚集，警方驅散期間，一名便衣警落單被追打，頭盔跌在地上，並一度拔槍。3名男子事隔兩年分別被控襲警等3罪，其中一名案發時23歲的男子今（30日）於西九龍法院承認以傘襲警，被裁判官鄭念慈判監8個月。男子求情指，犯案並非有預謀，案發時得悉有警員落單，身邊人有動作，才「一時意氣」施襲。裁判官指被告為最先襲警的其中一人，在警員倒地仍攻擊，使其骨裂及多處損傷，罪行十分嚴重，法庭必須判阻嚇性刑罰，發出不容姑息襲警的強烈訊息。至於同案不認罪的兩人，押後至7月25日進行審前覆核。罪成被告離庭前向旁聽席90度鞠躬。</p>
 <p>被告許俊偉（25歲）今承認於2020年2月29日在旺角西洋菜南街近豉油街附近，與其他人襲擊在正當執行職務的警員34731。</p>
 <p><strong>落單便衣警被襲約30秒 一度拔槍自衛</strong></p>
 <p>案情指，2020年2月29日晚上旺角和太子分別舉行悼念8.31事件集會，警員34731與其他便衣警在旺角巡邏，晚上近11時在彌敦道與山東街交界落車，追逐一班正在阻塞車路的人士，其時警員身穿警察背心和戴有寫有警察字眼的頭盔。</p>
@@ -19,12 +19,12 @@ author: 獨媒報導
 <p>受襲警員事後由兩名醫生驗傷，發現右額腫和有損傷，右手踭、右手腕近手掌、右膝和左膝亦有損傷，左邊腳外踝位置有骨折。</p>
 <p><strong>被告向受襲警員道歉 稱愚行絕非先父望見</strong></p>
 <p>辯方表示，被告現年25歲，與母親及姐姐同住，父親在他15歲時已離世，其姐姐今亦有到庭支持。被告擁有中六學歷，畢業後工作供養家庭，曾任文員、侍應，現職沙律店兼職，每月給母親數千元家用。</p>
-<p>辯方求情指，被告明白控罪嚴重，或面對刑期不短的監禁，但仍望承擔責任，節省法庭時間和展示悔意。被告親撰求情信，承認犯下大錯，指兩年來內心充滿愧疚與不安，亦明白「此等愚行絕不是已過世的爸爸、親友和法治社會希望見到」，少不更事亦非開脫理由。他鄭重向法庭及受襲警員道歉，又承諾日後會守法和進修。</p>
+<p>辯方求情指，被告明白控罪嚴重，或面對刑期不短的監禁，但仍望承擔責任，節省法庭時間和展示悔意。被告親撰求情信，承認犯下大錯，指兩年來內心充滿愧疚與不安，亦明白「此等愚行絕不是已過世的爸爸、親友和法治社會希望見到」，少不更事亦非開脫理由，望為自己行為負責。他鄭重向法庭及受襲警員道歉，又承諾日後會守法和進修。</p>
 <p><strong>求情指沒有預謀 因警員落單才「一時意氣」攻擊</strong></p>
-<p>辯方又呈上4封被告中學老師和前上司撰寫的求情信，稱讚他關心社會、愛護家庭、善良正直且樂於助人，有良好工作態度，亦與同事關係融洽。辯方形容，被告學歷不高，但從無放棄貢獻社會和家庭。</p>
+<p>辯方又呈上4封被告中學老師和前上司撰寫的求情信，稱讚他關心社會、愛護家庭、善良正直且樂於助人。有老師形容他性格內斂害羞，會默默為未來做準備，亦有上司形容他有良好工作態度，積極學習新技能，與同事關係融洽。辯方形容，被告學歷不高，但從無放棄貢獻社會和家庭。</p>
 <p>辯方同意警員傷勢不輕，本案有一定嚴重性。惟是次襲擊並非有預謀，被告當晚身穿休閒服裝與朋友到旺角吃晚飯，期間聽到有警員落單，身邊人有動作，才「一時意氣」衝出去攻擊，身上也沒有其他危險物品。辯方望法庭接納他僅受社會事件影響，一時愚蠢犯下罪行，予以輕判，以不超過一年為量刑起點。</p>
 <p><strong>官稱被告最先施襲、警傷勢嚴重 判監8個月</strong></p>
-<p>裁判官鄭念慈判刑時表示，本案牽涉十多人，被告為最先襲警的其中一人，雖無使用磚頭或利器，但也有使用雨傘襲擊，在警員倒地後仍繼續，使警員有頗嚴重傷勢及骨裂。</p>
+<p>裁判官鄭念慈判刑時表示，本案牽涉十多人，被告為最先襲警的其中一人，雖無使用磚頭或利器，但也有使用雨傘襲擊，在警員倒地後仍繼續，使警員有頗嚴重傷勢及骨裂，罪行十分嚴重。</p>
 <p>鄭念慈引一宗2020年元旦的案例，大批黑衣人在後巷拳打腳踢一名便衣警，使其身體多處受傷，曾失去意識一至兩分鐘，上訴庭指該案實際施襲者應以15個月為量刑起點。鄭考慮本案受襲警不至於失去知覺，故採納辯方所指12個月為量刑起點。</p>
 <p>鄭念慈強調，本案發生於香港比較動盪的時期，被告行為可能鼓動他人，產生漣漪效應，法庭必須判處阻嚇性刑罰，發出不會姑息縱容襲警行為的強烈訊息。鄭續指，最大的減刑因素是被告坦白認罪，此外無其他有力求情因素，終判他即時入獄8個月。</p>
 <p>被告聞判表現平靜，微微垂頭，離庭前向旁聽席90度鞠躬。</p>
