--- a/_posts/2022-05-30-INMEDIA-城中書店-前區議員黃文萱-不止是看書和思考-我們要成為獵人.html
+++ b/_posts/2022-05-30-INMEDIA-城中書店-前區議員黃文萱-不止是看書和思考-我們要成為獵人.html
@@ -39,8 +39,8 @@ author: 獨媒報導
 <p><strong>後記——最重要係心安</strong></p>
 <p>五月第個三周六的晚上，獵人書店舉行亮燈儀式。幾十人倒數呼歡，開香檳、梅酒、威士忌，場面好不熱鬧。前沙田區議會主席李志宏也舉杯暢飲，並與黃文萱打鬧。黃提起李的前度，李舉起中指回應，又開玩笑：「坐監唔探你！」</p>
 <p>黃文萱憶述以前在區議會的光景，她自話不算懂得與男生相處。「佢哋係好MAN鳩！沙田區得四個女區議員，我有時推開休息室道門，嘩！佢哋唔係講酒就講波，一係就講鹹濕野，一係就賭緊錢！」宣誓風波與辭職潮，卻令他們漸漸混熟，偶爾也一起喝酒。</p>
-<p>黃文萱俏皮地說：「唉呀，講曬出嚟添......唔緊要啦！都唔存在啦！」</p>
-<p>夜半時分，賓客醉意漸濃，卻不捨得歸去，圍成一圈談東談西，移民是一大話題。黃文萱被問及決定時，她說：「一定有諗過，不過我又無小朋友，無咩push factor……暫時都ok呀，最重要係心安。」朋友都拍她膊頭，表示支持。</p>
+<p>黃文萱俏皮地說：「唉呀，講曬出嚟添⋯⋯唔緊要啦！都唔存在啦！」</p>
+<p>夜半時分，賓客醉意漸濃，卻不捨得歸去，圍成一圈談東談西，移民是一大話題。黃文萱被問及決定時，她說：「一定有諗過，不過我又無小朋友，無咩push factor⋯⋯暫時都ok呀，最重要係心安。」朋友都拍她膊頭，表示支持。</p>
 <p>記者：馮曉彤<br />
 攝影：鍾健華</p>
 </div></div></div>
