--- a/_posts/2022-05-31-INMEDIA-回歸後四首紀念主題曲-李克勤成唯一從未缺席歌手.html
+++ b/_posts/2022-05-31-INMEDIA-回歸後四首紀念主題曲-李克勤成唯一從未缺席歌手.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7BWvu7" title="螢幕快照 2022-05-31 下午12.22.11"><img src="https://live.staticflickr.com/65535/52111862269_b521dc0a77_c.jpg" width="800" alt="螢幕快照 2022-05-31 下午12.22.11" /></a></p>
 <p>多人近年轉攻內地市場發展，例如容祖兒曾出演歌唱節目《我是歌手4》及《乘風破浪的姐姐2》；楊千嬅則出演《做家務的男人3》等多個綜藝節目，近日在節目《古韻新聲清明》演繹詩人杜牧作品《清明》，獲內地網民推舉為「行走的CD」；無綫電視節目《聲夢傳奇》冠軍炎明熹出道僅約一年，近日亦到內地出演《聲生不息》。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5d0EXo" title="miriam"><img src="https://live.staticflickr.com/65535/52110733867_ce713b45c5_c.jpg" width="800" alt="miriam" /></a><br /><em>楊千嬅五年前亦曾錄製《香港．我家》</em></p>
-<p>首次有內地歌手參與 包括張杰、張靚穎</p>
+<p><strong>首次有內地歌手參與 包括張杰、張靚穎<strong></strong></strong></p>
 <p>今次回歸主題曲亦是首度有內地歌手參演，包括著名歌手張杰及張靚穎；《2021中國好聲音》冠軍伍珂玥亦有份出演，伍出身於廣東台山，在比賽中加入李克勤團隊，先後以梅艷芳名曲《蔓珠莎華》及李克勤的《月半小夜曲》贏得年度冠軍。</p>
 <p><strong>《前》MV現獅子山畫面<strong></strong></strong></p>
 <p>《前》歌曲尾二句歌詞為「在這獅子山下衝線」，MV即出現獅子山畫面。林鄭月娥今早見記者特別感謝作詞及監製陳少琪，指她時任民政事務局常任秘書長時，亦有合作製作回歸十周年主題曲《始終有你》。</p>
