Update VOCUS 2022-06-01 patch

--- a/_posts/2022-05-31-VOCUS-灣生看台灣歷史-霧社事件的倖存者-昭和篇.html
+++ b/_posts/2022-05-31-VOCUS-灣生看台灣歷史-霧社事件的倖存者-昭和篇.html
@@ -18,7 +18,6 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <blockquote class="draft-block draft--blockquote">裡面兩間房間裡的婦女和孩子的慘狀是，小孩或緊依著母親、或坐著或躺，母親為保護孩子伏在孩子身上，眾人以種種不同的姿態被蕃刀砍得亂七八糟。</blockquote>
 <div class="draft-block draft--p left">看在倖存日本人眼中，動刀的「生蕃」是如此兇殘，不分男女老幼，一律用極為慘忍的方式殺害日本人。​</div>
 <div class="draft-block draft--p left">​偏偏在這群「生蕃」當中，有的人身分懸在晦暗的地帶。到底算是日本人，還是日本人口中的「生蕃」呢？​</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-5qoc6">身分分裂的賽德克族青年​</h2>
 <div class="draft-block draft--p left">​事件當中，有兩名身分特殊的原住民族青年，一個是名叫花岡一郎的教育所教師，另一名是叫花岡二郎的警手。​</div>
 <div class="draft-block draft--p left">​一郎與二郎沒有血緣關係，是日本政府特意取同姓氏的名字，塑造成開化的模範原住民族。​</div>
@@ -31,7 +30,6 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--quotesSpecial center"><div class="content">我等必須離開這世間​<br>因蕃人被迫服太多勞役​<br>引起憤怒​<br>導致這次事件​<br>我等也被蕃眾拘捕​<br>無能為力​</div></div>
 <div class="draft-block draft--p left">一郎選擇先殺死妻子、兒子，自己再切腹自殺。二郎選擇與族人一起上吊自殺，而且是最後一個上吊的人。但是，二郎在自殺前，要懷孕的妻子高山初子活下去。​</div>
 <div class="draft-block draft--p left">​後來，高山初子真的活下來，她的後人繼續在臺灣生活，只不過霧社事件成為禁忌的話題，大家不願談起傷痛的記憶。​</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-7gddu">強迫遺忘的殖民矛盾​</h2>
 <div class="draft-block draft--p left">在霧社事件過後的七年，也就是 1937 年，中日戰爭爆發。​</div>
 <div class="draft-block draft--p left">​臺灣沈浸在高喊「赤誠」、「武運長久」的氛圍中。​</div>
@@ -41,7 +39,6 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">​這則故事，無論真偽如何，確實成為許多創作者的靈感，相關的小說、電影紛紛出現。​</div>
 <div class="draft-block draft--p left">​甚至，找來知名詞曲創作人做歌曲《莎韻之鐘》，還找霧社事件倖存者佐塚佐和子，回台灣在總督面前演唱。​</div>
 <div class="draft-block draft--p left">在皇民化的氛圍下，霧社事件激起的殖民矛盾，壓抑得像是不存在一樣。​</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-e7q5p">記憶的復健之路​</h2>
 <div class="draft-block draft--p left">到了戰後，關於霧社事件的真相，其實有很長一段時間，外界以為帶頭者是花岡一郎，不是莫那魯道。​</div>
 <div class="draft-block draft--p left">經過多年的澄清證明，政府才終於修正這段歷史，並且重新安葬莫那魯道的遺骸（原本放置在台大人類學系）。​</div>
@@ -49,6 +46,6 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">​看的時候會深刻感受到，霧社事件對那些後代來說，並非只是單純的歷史片段而已，還參雜老一輩痛苦與不解的回憶。​</div>
 <div class="draft-block draft--p left">​後代努力想追尋那段痛苦的家族記憶，雖然痛苦，卻是能獲得緩解的復健之路。​</div>
 <div class="draft-block draft--p left">至於昭和時期還發生哪些歷史事件，歡迎看我 YouTube 頻道「熬夜的便當」最新上線影片（連結詳留言）！</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/urf5xrt38gU"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/urf5xrt38gU"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜愛分享歷史、文學小知識給大家！歡迎訂閱我的 <a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">Youtube 頻道「熬夜的便當」</a>以及 <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">IG pan.yutang</a> 得到更多新的歷史小故事喔！</div>
