--- a/_posts/2022-05-31-VOCUS-臺灣豪門的宮鬥-辜顏碧霞小說-流.html
+++ b/_posts/2022-05-31-VOCUS-臺灣豪門的宮鬥-辜顏碧霞小說-流.html
@@ -29,7 +29,6 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">​畢竟當初聽從母親遺言，娶一個妻子三個妾的人是他自己：​</div>
 <blockquote class="draft-block draft--blockquote">他深信，照著母親的遺言，娶了三妻四妾生下不少男丁是孝順的表現。因為這個信念壓制了家中女眷們的爭執及一切不滿，使她們一昧地服從與忍讓。</blockquote>
 <div class="draft-block draft--p left">與其說《流》是在八卦大家族醜聞，不如說是在替深受傳統家族所束縛的不幸人們訴苦。​</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-fc3g5">時代的悲劇碾壓家族的不幸​</h2>
 <div class="draft-block draft--p left">《流》最後並未像一般宮鬥小說，來個女主角翻身的逆襲，一路爬到高位。​</div>
 <div class="draft-block draft--p left">​小說結尾進入了 1937 年戰爭時期，王醫師去世，家族尚活著的最大兒子收到徵兵令。​</div>
@@ -43,7 +42,6 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">​縱觀她的一生，對這些不幸沒有表露過太多怨言，如同小說《流》尾末的一首詩：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">無論遇到任何的困難​<br>我都要堅強活下去​<br>溫和良善地生活​<br>流水穿透岩石，流入低處​<br>我也與命運一同流去​<br>不詛咒、不違逆，不管身處何地​<br>只要和孩子一起​<br>掉進命運的漩流​</div></div>
 <div class="draft-block draft--p left">（詳細內容詳見 YouTube 影片）</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Tpc-XTbrLo8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Tpc-XTbrLo8"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜愛分享歷史、文學小知識給大家！歡迎訂閱我的 <a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">Youtube 頻道「熬夜的便當」</a>以及 <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">IG pan.yutang</a> 得到更多新的歷史小故事喔！</div>
