--- a/_posts/2022-05-31-VOCUS-費爾的旅程-傷痛所牽起的緣.html
+++ b/_posts/2022-05-31-VOCUS-費爾的旅程-傷痛所牽起的緣.html
@@ -43,4 +43,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/34452df9-7c95-4201-9f29-cc3f8857e30f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">可以說因為遭遇國際與自己國家相關人員的不重視，對比台灣那麼多毫不相干在另外一個國度努力協助他，讓費爾在台灣留下好印象，對於費爾來說台灣不是外國人常見的繁華的台北市，而是被群山環繞的南投埔里與阿里山脈，就像是他在紐西蘭之外的另一個家。</div>
 <div class="draft-block draft--p left">我認為原住民教會的牽絆幫助了費爾很多，在無助時宗教與信仰的確讓人有重大的依靠，有人以宗教幫助人走出傷痛，但也有人用宗教讓人傷痛，我認為費爾在台遭遇是不幸中的幸運，獲得許多人幫助。但最重要的是當駭事發生後，我們要如何面對傷痛，也許在費爾心中每當重回台灣這片土地，就是對於兒子離世的緬懷吧。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/ybN9L0F67KY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/ybN9L0F67KY"></iframe></div>
